se corrigió problema en el while principal